[package]
name = "roudenn"
version = "0.1.0"
edition = "2024"

description = "Extract workout sessions from a Gadgetbridge export (Amazfit)."
license = "UNLICENSED"
repository = "https://github.com/MathieuMoalic/roudenn"
readme = "README.md"
keywords = ["gadgetbridge", "amazfit", "gpx", "sqlite", "fitness"]
categories = ["command-line-utilities", "parsing"]

[dependencies]
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
quick-xml = "0.39"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }

